# ucui

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: app.rs  clock.rs  config.rs  logger.rs  main.rs  ser.rs  state.rs  turn.rs
cli/src/engine/: blunders.rs  mod.rs  simple.rs  uci.rs
cli/src/ui/: board.rs  event.rs  home.rs  info.rs  input.rs  logs.rs
clients/: package-lock.json  package.json  tsconfig.json
clients/apps/: tsconfig.json  vite.config.monitor.js  vite.config.play.js
clients/apps/lib/: dom.ts  html.ts  option.ts  svg.ts  tuple.ts  util.ts
clients/apps/lib/ucui/: board.ts  fen.ts  types.ts
clients/apps/monitor/: fen.ts  index.html  main.ts  style.css  style.less
clients/apps/play/: clock.ts  config.ts  data.ts  eco.ts  engine.ts  game.ts  history.ts  home.ts  index.html  input.ts  lock-screen.ts  main.ts  movelist.ts  play.ts  san.ts  sound.ts  store.ts  style.css  style.less  util.ts
eco/: Cargo.toml
eco/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  shakmaty_serde.rs  uci.rs
server/: Cargo.toml
server/client/: index.html  package-lock.json  package.json
server/client/src/: clock.ts  config.ts  data.ts  eco.ts  engine.ts  game.ts  home.ts  input.ts  lock-screen.ts  main.ts  movelist.ts  play.ts  san.ts  sound.ts  store.ts  style.css  style.less  util.ts
server/client/src/lib/: html.ts  router.ts  util.ts
server/src/: config.rs  eco.rs  main.rs  monitor.rs  play.rs  server.rs  state.rs
src/: app.rs  clock.rs  config.rs  eco-table.in  eco.rs  engine.rs  export.rs  logger.rs  main.rs  state.rs  turn.rs  ui.rs  ui.rs.bak  util.rs
src/engine/: blunders.rs  mod.rs  simple.rs  uci.rs
src/ui/: board.rs  event.rs  footer.rs  home.rs  info.rs  input.rs  log.rs  logs.rs  mod.rs  play.rs  state.rs
utils/: Cargo.toml
utils/src/: lib.rs  serde.rs
