[workspace]
members = ["cli", "eco", "engine", "server", "utils"]
resolver = "2"

[workspace.package]
description = "A minimal UCI engine frontend experiment"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"
authors = ["Pierre Marchand <pieremarc07@gmail.com>"]
repository = "https://github.com/pierremarc/ucui"
homepage = "https://github.com/pierremarc/ucui"
readme = "README.md"
keywords = ["chess", "tui"]


[profile.release]
debug = 1
lto = "thin"


[workspace.dependencies]
blunders-engine = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.24", features = ["derive"] }
log = { version = "0.4.24", features = ["std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shakmaty = "0.27.2"
shakmaty-uci = "0.1.1"
uci = "0.2.3"

