[package]
name = "ucui"
description = "ucui cli"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
shakmaty ={ workspace = true }
shakmaty-uci ={ workspace = true }
uci ={ workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
copypasta = "0.10.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
timer = "0.2.0"
tui-big-text = "0.7.0"
blunders-engine = "0.1.0"


