[package]
name = "ucui-eco"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
shakmaty.workspace = true
shakmaty-uci.workspace = true
serde.workspace = true
serde_json.workspace = true
ucui-utils = { path = "../utils" }
