[package]
name = "engine"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
log = { version = "0.4.24", features = ["std"] }
shakmaty = "0.27.2"
shakmaty-uci = "0.1.1"
uci = "0.2.3"
# uci = { path = "../../uci-rs" }
blunders-engine = "0.1.0"


[profile.release]
debug = 1
lto = "thin"
