[package]
name = "ucui-utils"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shakmaty.workspace = true
